mysql.yaml
---
# MySQL Deployment with Resource Requests
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      # volumes:
      # - name: mysql-storage
      #   persistentVolumeClaim:
      #     claimName: my-volume-claim
      containers:
      - image: mysql:8
        name: mysql
        # volumeMounts:
        # - name: mysql-storage
        #   mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
          name: mysql
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
---
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
